--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oscar Health Insurance</title>
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
     
@@ -46,6 +47,44 @@
 
     </main>
     <!-- footer -->
+    <footer>
+        <section class="signup">
+            <div>
+                <h3>Sign up for insider tips on how to get the best care and save on header Insurance</h3>
+            </div>
+            <div>
+                <p>Email</p>
+                <p>your email</p>
+            </div>
+        </section>
+        <section class="oscar">
+        <div class="leftsocial">
+            <h3>Oscar</h3>
+            <ul class="social-links">
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>LinkedIN</li>
+                <li>YouTube</li>
+                </li>
+            </ul>
+        </div>
+        <div class="questions">
+            <h3>Question about plan</h3>
+            <ul>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
+
+        </section>
+
+        <section class="link">
+            <div>
+                
+            </div>
+        </section>
+    </footer>
 
 </body>
 </html>
